# glyph_phase_engine

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: dependabot.yml
.github/workflows/: automerge-dependencies.yml  ci-python.yml  codeql.yml  publish-pypi.yml  publish-testpypi.yml  test.yml
docs/: CI_IMPLEMENTATION.md
scripts/: validate_workflows.py
src/glyph_phase_engine/: __init__.py  engine.py
tests/: test_engine.py
