[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glyph-phase-engine"
version = "0.1.0"
description = "Python engine that processes symbolic input and adjusts operational phase based on dynamic delta values"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "wizardaax"},
]
keywords = ["phase", "engine", "symbolic", "processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/wizardaax/glyph_phase_engine"
Repository = "https://github.com/wizardaax/glyph_phase_engine"
Issues = "https://github.com/wizardaax/glyph_phase_engine/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/glyph_phase_engine"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
